# Tlacuilo

./: .gitattributes  .gitignore  BATTLE_CARD.txt  CHANGELOG.md  CODEX_PROMPT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: auto-close-pr.yml  pages.yml
backend/: __init__.py  exceptions.py  font_catalog.py  font_detect.py  font_detect_exclusions.json  pdf_annotations.py  pdf_attachments.py  pdf_convert.py  pdf_edit.py  pdf_forms.py  pdf_layers.py  pdf_ocr.py  pdf_pages.py  pdf_redaction.py  pdf_sanitize.py  pdf_security.py  pdf_signatures.py  pdf_watermark.py  requirements.txt  utils.py
src/: App.svelte  App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: annotations.rs  font_detect.rs  lib.rs  main.rs  pdf_compress.rs  pdf_ocr.rs  pdf_viewer.rs  python_bridge.rs
src/lib/components/: AppSplash.svelte  LoadingOverlay.svelte  OcrProgressSplash.svelte  PagePreviewModal.svelte  PageSelector.svelte  Sidebar.svelte  SignatureCanvas.svelte  TabBar.svelte  TabViewerContainer.svelte
src/lib/i18n/: index.ts  translations.ts
src/lib/stores/: annotations.svelte.ts  bookmarks.svelte.ts  debugLog.svelte.ts  edits.svelte.ts  forms.svelte.ts  redactions.svelte.ts  settings.svelte.ts  signatures.svelte.ts  status.svelte.ts  tabs.svelte.ts
src/lib/utils/: pdfjs.ts  thumbnails.ts
src/lib/views/: CompressPDF.svelte  ConvertFromPDF.svelte  ConvertToPDF.svelte  Dashboard.svelte  EncryptPDF.svelte  FontDetect.svelte  MergePDF.svelte  MergePage.svelte  MergeView.svelte  OCRPDF.svelte  PlaceholderPage.svelte  RedactPDF.svelte  RotatePDF.svelte  SanitizePDF.svelte  Settings.svelte  (+6 more)
(+28 files in other folders)
