[package]
name = "tlacuilo"
version = "0.1.0"
description = "Tlacuilo desktop PDF toolkit"
authors = ["Tlacuilo"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2.4.1"

# PDF rendering with MuPDF engine (AGPL licensed)
#
# NOTE: MuPDF bundles several C libraries (e.g. libjpeg/zlib/harfbuzz/freetype) by default.
# When statically linked, their global symbols can conflict with GTK/GdkPixbuf loaders used by
# the native file dialog on Linux, causing hard crashes (SIGSEGV) while browsing folders.
# Prefer linking common GUI-stack libs from the system to avoid symbol interposition issues.
mupdf = { version = "0.5", default-features = false, features = [
  "system-fonts",
  "sys-lib-libjpeg",
  "sys-lib-zlib",
  "sys-lib-harfbuzz",
  "sys-lib-freetype",
] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
